# khulnasoft-lab-_-pr-insight

./: .deepsource.toml  .dockerignore  .flake8  .gitignore  .pr_insight.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.github_action  Dockerfile.github_action_dockerhub  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  action.yaml  bump.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.local.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml
.github/workflows/: build-and-test.yaml  code_coverage.yaml  docs-ci.yaml  e2e_tests.yaml  pr-action-review.yaml  pr-assistant-review.yaml  pr-insight-review.yaml  publish_pipeline.yml  release.yml  test-redistribute.yml
docker/: Dockerfile  Dockerfile.lambda
docs/: README.md  mkdocs.yml
docs/docs/: CNAME  index.md
docs/docs/ai_search/: index.md
docs/docs/chrome-extension/: data_privacy.md  features.md  index.md
docs/docs/core-abilities/: auto_best_practices.md  code_validation.md  compression_strategy.md  dynamic_context.md  fetching_ticket_context.md  index.md  (+6 more)
docs/site/: 404.html  index.html
github_action/: entrypoint.sh
pr_action/: cli.py  cli_pip.py  config_loader.py
pr_action/action/: pr_action.py
pr_action/algo/: file_filter.py  git_patch_processing.py  language_handler.py  pr_processing.py  token_handler.py  utils.py
pr_action/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_action/identity_providers/: __init__.py  default_identity_provider.py
pr_action/log/: __init__.py
pr_action/secret_providers/: __init__.py  google_cloud_storage_secret_provider.py
pr_action/servers/: atlassian-connect.json  azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py  help.py  serverless.py
pr_action/settings/: configuration.toml
pr_action/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_message.py  pr_information_from_user.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py
pr_assistant/: cli.py  cli_pip.py  config_loader.py
pr_assistant/agent/: pr_assistant.py
pr_assistant/algo/: file_filter.py  git_patch_processing.py  language_handler.py  pr_processing.py  token_handler.py  utils.py
pr_assistant/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_client.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_assistant/identity_providers/: __init__.py  default_identity_provider.py
pr_assistant/log/: __init__.py
pr_assistant/secret_providers/: __init__.py  google_cloud_storage_secret_provider.py
pr_assistant/servers/: atlassian-connect.json  azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py  help.py  serverless.py
pr_assistant/settings/: configuration.toml  pr_reviewer_prompts.toml
pr_assistant/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_message.py  pr_information_from_user.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py
pr_insight/: cli.py  cli_pip.py  config_loader.py
pr_insight/agent/: pr_insight.py
pr_insight/algo/: __init__.py  cli_args.py  file_filter.py  git_patch_processing.py  language_handler.py  pr_processing.py  token_handler.py  utils.py
pr_insight/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_client.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_insight/identity_providers/: __init__.py  default_identity_provider.py
pr_insight/insight/: pr_insight.py
pr_insight/log/: __init__.py
pr_insight/secret_providers/: __init__.py  google_cloud_storage_secret_provider.py  secret_provider.py
pr_insight/servers/: atlassian-connect.json  azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py  gunicorn_config.py  help.py  serverless.py  utils.py
pr_insight/settings/: azure-pipelines.yml  configuration.toml  pr_code_suggestions_prompts.toml  pr_code_suggestions_reflect_prompts.toml  pr_description_prompts.toml  pr_help_prompts.toml  pr_reviewer_prompts.toml
pr_insight/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_docs.py  pr_help_message.py  pr_information_from_user.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py  ticket_pr_compliance_check.py
scripts/: format.sh  lint.sh  test.sh
tests/e2e_tests/: e2e_utils.py  test_bitbucket_app.py  test_github_app.py  test_gitlab_webhook.py
tests/health_test/: main.py
tests/unittest/: test_azure_devops_parsing.py  test_bitbucket_provider.py  test_clip_tokens.py  test_code_coverage_workflow.py  test_codecommit_client.py  test_codecommit_provider.py  test_convert_to_markdown.py  test_delete_hunks.py  test_extend_patch.py  test_fetching_sub_issues.py  test_file_filter.py  test_find_line_number_of_relevant_line_in_file.py  test_fix_output.py  test_github_action_output.py  test_handle_patch_deletions.py  test_language_handler.py  test_load_yaml.py  test_parse_code_suggestion.py  test_try_fix_yaml.py  test_workflow_integration.py
(+96 files in other folders)
