[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-insight"
version = "0.2.4"

authors = [{name= "KhulnaSoft", email = "support@khulnasoft.com"}]

maintainers = [
  {name = "KhulnaSoft DevOps", email = "info@khulnasoft.com"},
  {name = "NextLinux", email = "connect@next-linux.systems"},
]

description = "KhulnaSoft PR-Insight helps review and handle pull requests by providing AI feedback and suggestions."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["AI", "Insights", "Pull Request", "Automation", "Code Review"]
license = {name = "Apache 2.0", file = "LICENSE"}

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Version Control",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Khulnasoft/pr-insight"
"Documentation" = "https://pr-insight-docs.khulnasoft.com/"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
[tool.setuptools.packages.find]
where = ["."]
include = ["pr_insight*"]

[tool.setuptools.package-data]
pr_insight = ["py.typed"]
include = ["pr_insight*"]

[project.scripts]
pr-insight = "pr_insight.cli:run"

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I001", "I002"]
fixable = ["I001"]
unfixable = ["B"]
exclude = ["api/code_completions"]
ignore = ["E999", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short -q"
testpaths = ["tests"]
